syntax = "proto3";
package lbm.wasm.v1;

import "gogoproto/gogo.proto";

option go_package                       = "github.com/line/lbm-sdk/x/wasm/lbm/types";
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.goproto_getters_all)  = false;
option (gogoproto.equal_all)            = true;

// DeactivateContract gov proposal content type adds a contract to inactive list.
message DeactivateContract {
  // Title is a short summary
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  // Description is a human readable text
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  // Contract is the smart contract address to deactivate.
  string contract = 3 [(gogoproto.moretags) = "yaml:\"contract\""];
}

// ActivateContract gov proposal content type deletes a contract from inactive list
message ActivateContract {
  // Title is a short summary
  string title = 1 [(gogoproto.moretags) = "yaml:\"title\""];
  // Description is a human readable text
  string description = 2 [(gogoproto.moretags) = "yaml:\"description\""];
  // Contract is the smart contract address to activate.
  string contract = 3 [(gogoproto.moretags) = "yaml:\"contract\""];
}
